[gd_scene load_steps=8 format=3 uid="uid://bwo6c4ivrpyms"]

[ext_resource type="Script" uid="uid://bb3i4v5puka4t" path="res://Scenes/HUD/hud.gd" id="1_1kun3"]
[ext_resource type="FontFile" uid="uid://bhncooqoms0m" path="res://Assets/Fonts/speedkings.regular.otf" id="1_teocd"]
[ext_resource type="FontFile" uid="uid://bkn16srp1dny" path="res://Assets/Fonts/powerlordital.ttf" id="2_fqps5"]

[sub_resource type="Animation" id="Animation_c4j0p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Countdown/Countdown:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Countdown/Countdown:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Finish:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_yfet3"]
resource_name = "countdown"
length = 2.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Countdown/Countdown:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "go!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Countdown/Countdown:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_6xyhj"]
resource_name = "finish"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Finish:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jm7ob"]
_data = {
&"RESET": SubResource("Animation_c4j0p"),
&"countdown": SubResource("Animation_yfet3"),
&"finish": SubResource("Animation_6xyhj")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_1kun3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Time" type="Control" parent="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="DarkOverlay" type="ColorRect" parent="Control/Time"]
layout_mode = 2
anchor_right = 0.021
anchor_bottom = 0.049
offset_left = 784.0
offset_top = 17.0
offset_right = 951.808
offset_bottom = 17.248
color = Color(0, 0, 0, 0.337255)

[node name="LapTime" type="Label" parent="Control/Time"]
layout_mode = 2
offset_left = 864.0
offset_top = 16.0
offset_right = 976.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0.988235, 0.964706, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_teocd")
theme_override_font_sizes/font_size = 34
text = "00:00.000"
horizontal_alignment = 3
justification_flags = 0

[node name="TimeLapLabel" type="Label" parent="Control/Time"]
layout_mode = 2
offset_left = 793.0
offset_top = 16.0
offset_right = 841.0
offset_bottom = 47.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 24
text = "Lap"

[node name="DarkOverlay2" type="ColorRect" parent="Control/Time"]
layout_mode = 2
offset_left = 784.0
offset_top = 57.0
offset_right = 976.0
offset_bottom = 88.0
color = Color(0, 0, 0, 0.337255)

[node name="BestTime" type="Label" parent="Control/Time"]
layout_mode = 2
offset_left = 864.0
offset_top = 48.0
offset_right = 976.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0.988235, 0.964706, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_teocd")
theme_override_font_sizes/font_size = 34
text = "--:--.---"
horizontal_alignment = 3
vertical_alignment = 1

[node name="BestTimeLabel" type="Label" parent="Control/Time"]
layout_mode = 2
offset_left = 792.0
offset_top = 56.0
offset_right = 864.0
offset_bottom = 87.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 24
text = "Best"

[node name="Lap" type="Control" parent="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
metadata/_edit_lock_ = true

[node name="LapLabel" type="Label" parent="Control/Lap"]
layout_mode = 0
offset_left = 1064.0
offset_top = 16.0
offset_right = 1128.0
offset_bottom = 55.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 30
text = "Lap"
metadata/_edit_lock_ = true

[node name="LapNumber" type="Label" parent="Control/Lap"]
layout_mode = 0
offset_left = 992.0
offset_right = 1056.0
offset_bottom = 109.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 90
text = "1"
metadata/_edit_lock_ = true

[node name="TotalLapNumber" type="Label" parent="Control/Lap"]
layout_mode = 0
offset_left = 1048.0
offset_top = 48.0
offset_right = 1112.0
offset_bottom = 98.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 40
text = "/3"
metadata/_edit_lock_ = true

[node name="Position" type="Control" parent="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
metadata/_edit_lock_ = true

[node name="PosLabel" type="Label" parent="Control/Position"]
layout_mode = 0
offset_left = 136.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 55.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 30
text = "Pos"
metadata/_edit_lock_ = true

[node name="Pos" type="Label" parent="Control/Position"]
layout_mode = 0
offset_left = 8.0
offset_right = 112.0
offset_bottom = 109.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 90
text = "1"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="TotalPos" type="Label" parent="Control/Position"]
layout_mode = 0
offset_left = 120.0
offset_top = 48.0
offset_right = 208.0
offset_bottom = 98.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 40
text = "/12"
metadata/_edit_lock_ = true

[node name="Countdown" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Countdown" type="Label" parent="Control/Countdown"]
layout_mode = 0
offset_left = 312.0
offset_top = 200.0
offset_right = 721.0
offset_bottom = 495.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 250
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 2

[node name="Finish" type="Control" parent="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DarkOverlay" type="ColorRect" parent="Control/Finish"]
layout_mode = 2
anchor_right = 0.021
anchor_bottom = 0.049
offset_top = 224.0
offset_right = 1151.16
offset_bottom = 446.04
color = Color(0, 0, 0, 0.337255)

[node name="FinalPosition" type="Label" parent="Control/Finish"]
layout_mode = 0
offset_top = 224.0
offset_right = 1152.0
offset_bottom = 448.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fqps5")
theme_override_font_sizes/font_size = 189
text = "finish 3rd"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 2

[node name="FinalResult" type="Label" parent="Control/Finish"]
layout_mode = 0
offset_left = 554.0
offset_top = 200.0
offset_right = 594.0
offset_bottom = 223.0

[node name="TrainChase" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 328.0
offset_top = 70.0
offset_right = 698.0
offset_bottom = 205.0

[node name="DistanceToTrain" type="Label" parent="Control/TrainChase"]
layout_mode = 2

[node name="TrainProgress" type="ProgressBar" parent="Control/TrainChase"]
layout_mode = 2

[node name="TrainProgressLabel" type="Label" parent="Control/TrainChase"]
layout_mode = 2

[node name="RaceStatus" type="Label" parent="Control/TrainChase"]
layout_mode = 2

[node name="SpeedStatus" type="Label" parent="Control/TrainChase"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jm7ob")
}
autoplay = "countdown"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
